<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tv_register">Dont\'t have an account ? Sign up here</string>
    <string name="tv_login">Already registered ? Go and login now</string>
    <string name="loading">Loading ...</string>
</resources>
